--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
+    "sanitize-html": "^2.17.0",
     "sharp": "^0.34.2",
     "socket.io": "^4.8.1",
     "zod": "^3.25.67"
