--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-text-editor-kit": "^2.0.1",
     "react-timeago": "^8.2.0",
     "react-toastify": "^11.0.5",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
